Initial non-working service
API fails tests purposely.

The MySQL driver/client has mostly working functionality and a
test that it passes.

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,9 @@ deps =
 
 [testenv:flake8]
 deps = flake8
-commands = flake8 mysql_backup.py tests
+commands = flake8 app tests
 
 [testenv:py3]
+changedir = {toxinidir}
 commands = pytest -v -s --basetemp={envtmpdir} tests
 
