--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 # The order of packages is significant, because pip processes them in the order
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
+Flask==0.12.2
+Flask-API==0.7.1
 paramiko==2.2.1
 tox==2.7.0
