Add pytest-cov to tox runs

--- a/tox.ini
+++ b/tox.ini
@@ -13,5 +13,5 @@ commands = flake8 app tests
 
 [testenv:py3]
 changedir = {toxinidir}
-commands = pytest -v -s --basetemp={envtmpdir} tests
+commands = pytest -v -s --cov=app term-missing --basetemp={envtmpdir} tests
 
